	  EC-SCREEN-STARTING-COLUMN and EC-SCREEN-ITEM-TRUNCATED.
	* screenio.c, common.h: refactored functions implementing ACCEPT and
	  DISPLAY.

2015-07-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* call.c (cob_init_call): Don't add the current directory "." to resolve_path
	  if it's already set (either via runtime configuration or default value)

2015-07-07  Ron Norman

	* common.c (cob_expand_env_string): copy SPACE, LR, CR, HT, VT as spaces,
	  the first implementation dropped them completely
	* fileio.c fixed to avoid core dump when COB_SYNC and using BDB

2015-06-24  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: bug #140 - changed pow to int_pow to avoid rounding
	  errors. On MinGW, pow (10, 8) rounded to 9999999 instead of 10000000,
	  for example.

2015-06-22  Luke Smith <cobcoder@users.sourceforge.net>

	* screenio.c: Add or enhance special keys to Extended ACCEPT.
          Insert, Tab, Shift-Tab, Backspace, Delete, Alt-Delete, End,
          Alt-End, Home, Alt-Home, Left-arrow, Alt-Left-arrow,
          Right-arrow, Alt-Right-arrow.

2015-06-21  Edward Hart <edward.dan.hart@gmail.com>

	* common.c: fixed segfault caught in updated SWITCH test by extending
	  cob_switch array by 1.

2015-05-18  Luke Smith <cobcoder@users.sourceforge.net>

	* screenio.c (cob_screen_attr): Fix bug #143 WITH BLANK SCREEN / BLANK LINE
	  has to color the whole screen / line.

2015-05-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: fr #65 added more switches "SWITCH-16" to "SWITCH-36"

2015-05-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cb_config_entry): remove redundant aliases !copy/(un)set/!anything
	* common.c: add ACUCOBOL configuration aliases LOGICAL_CANCELS
	  (= !COB_PHYSICAL_CANCEL) and STRIP_TRAILING_SPACES (= !COB_LS_FIXED)

2015-05-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_load_config_file, cob_load_config): respect environment